kubernetes/apps/mailpit/service-pop3.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mailpit-pop3-svc
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/instance: mailpit
  ports:
  - name: pop3
    protocol: TCP
    port: 1110
    targetPort: mailpit-pop3
