kubernetes/apps/mailpit/service-web.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mailpit-web-svc
spec:
  selector:
    app.kubernetes.io/instance: mailpit
  ports:
  - name: web
    protocol: TCP
    port: 80
    targetPort: mailpit-web
